# aoc-2021-python

./: pyproject.toml
day1/: day1.py
day2/: day2.py
day3/: day3.py
day4/: day4.py
